--- a/layouts/educational/list.html
+++ b/layouts/educational/list.html
@@ -25,7 +25,46 @@
         {{ end }}
         <div class="posts-list">
           {{ range .Paginator.Pages }}
+          <!-- Dirty-ish CSS for thumbnail image -->
+          <style>
+            .post-preview {
+              position: relative;
+              border-radius: 3px;
+              padding: 1cm 0.5cm;
+              overflow: hidden;
+              margin-bottom: 20px;
+            }
+            .post-backdrop {
+              background: url("https://placehold.it/800x400") center no-repeat;
+              background-size: cover;
+              transform: scale(1.1);
+              position: absolute;
+              top: 0;
+              bottom: 0;
+              left: : 0;
+              right: 0;
+              width: 100%;
+              height: 100%;
+              z-index: -1;
+
+              transition: .5s ease;
+              -webkit-filter: blur(5px) grayscale(25%);
+              filter: blur(5px) grayscale(25%);
+            }
+            .post-preview:hover .post-backdrop {
+              -webkit-filter: blur(0px) grayscale(0%);
+              filter: blur(0px) grayscale(0%);
+            }
+          </style>
             <article class="post-preview">
+              <!-- Post backdrop -->
+              {{ if isset .Params "thumbnail" }}
+              <div class="post-backdrop" style="background-image: url({{ .Params.thumbnail }});"></div>
+              {{ else}}
+              <div class="post-backdrop"></div>
+              {{ end }}
+
+              <!-- Post preview -->
               <a href="{{ .Permalink }}">
                 <h2 class="post-title">{{ .Title }}</h2>
 
@@ -35,18 +74,9 @@
                   </h3>
                 {{ end }}
               </a>
-
               <p class="post-meta">
                 {{ default (i18n "dateFormat") .Site.Params.dateformat | .Date.Format | i18n "postedOnDate" }}
               </p>
-              <div class="post-entry">
-                {{ if .Truncated }}
-                  {{ .Summary }}
-                  <a href="{{ .Permalink }}" class="post-read-more">[{{ i18n "readMore" }}]</a>
-                {{ else }}
-                  {{ .Content }}
-                {{ end }}
-              </div>
 
               {{ if .Params.tags }}
                 <span class="post-meta">
@@ -55,7 +85,6 @@
                   {{ end }}
                 </span>
               {{ end }}
-
             </article>
           {{ end }}
         </div>
