--- a/site/static/css/main.css
+++ b/site/static/css/main.css
@@ -3627,7 +3627,7 @@
 			}
 
 			#main > * > .inner {
-				padding: 4em 0 2em 0 ;
+				padding: 2em 0 2em 0 ;
 				margin: 0 auto;
 				max-width: 50em;
 				width: calc(100% - 6em);
@@ -3661,11 +3661,11 @@
 			background-position: center;
 			display: block;
 
-			-webkit-filter: brightness(30%) blur(3px);
-			-moz-filter: brightness(30%) blur(3px);
-			-o-filter: brightness(30%) blur(3px);
-			-ms-filter: brightness(30%) blur(3px);
-			filter: brightness(30%) blur(3px);
+			-webkit-filter: brightness(30%);
+			-moz-filter: brightness(30%);
+			-o-filter: brightness(30%);
+			-ms-filter: brightness(30%);
+			filter: brightness(30%);
 		}
 
 /* Contact */
