--- a/site/layouts/projects/single.html
+++ b/site/layouts/projects/single.html
@@ -15,11 +15,11 @@
             <!-- One -->
             <section id="one">
                 <div class="inner">
-                    {{ $logo_path := (printf "img%slogo.png" $.RelPermalink) }}
-                    {{ if (fileExists (printf "static/%s" $logo_path)) }}
+                    {{ $image_path := (printf "img/%s" $.RelPermalink) }}
+                    {{ if (fileExists (printf "static/%s/logo.png" $image_path)) }}
                     <div class="row">
                         <div class="12u" id="logo">
-                            <img src="{{ .Site.BaseURL }}/{{ $logo_path }}" alt="{{ .Title }}" width="300">
+                            <img src="{{ .Site.BaseURL }}/{{ $image_path }}/logo.png" alt="{{ .Title }}" width="300">
                         </div>
                     </div>
                     {{ else }}
@@ -30,14 +30,18 @@
                     <div class="row">
                         <div class="8u 12u$(small)">
                             <div style="position: relative; margin-bottom: 5%; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
+                              {{ if isset .Params "trailer"}}
                                 <iframe src="//www.youtube.com/embed/{{ .Params.trailer }}?autoplay=1" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" allowfullscreen frameborder="0" title="YouTube Video"></iframe>
+                              {{ else }}
+                                <img src="{{ .Site.BaseURL }}/{{ $image_path }}/{{ .Params.poster }}" style="position: absolute; top: 0; left: 0; width: 100%;">
+                              {{ end }}
                             </div>
                         </div>
                         <div class="4u 12u$(small)">
                             <h4>What I did</h4>
                             <ul class="alt">
                                 {{ range .Params.contributions }}
-                                <li>{{ . }}</li>
+                                <li>{{ .  | markdownify }}</li>
                                 {{ end }}
                             </ul>
                         </div>
