--- a/site/layouts/projects/single.html
+++ b/site/layouts/projects/single.html
@@ -20,7 +20,7 @@
                         {{ if (fileExists (printf "static/%s/logo.png" $image_path)) }}
                         <div class="row">
                             <div class="12u" id="logo">
-                                <img src="{{ .Site.BaseURL }}/{{ $image_path }}/logo.png" alt="{{ .Title }}" width="300">
+                                <img src="{{ .Site.BaseURL }}/{{ $image_path }}/logo.png" alt="{{ .Title }}">
                             </div>
                         </div>
                         {{ else }}
