--- a/site/static/css/main.css
+++ b/site/static/css/main.css
@@ -4014,30 +4014,24 @@
 }
 
 #logo img {
-    max-width: 450px;
-    width: 100%;
+		height: 200px;
+		width: auto;
 }
 @media screen and (max-width: 1680px) {
     #logo img {
-        max-width: 350px;
+				height: 175px;
     }
 }
 
 @media screen and (max-width: 1280px) {
     #logo img {
-        max-width: 350px;
-    }
-}
-
-@media screen and (max-width: 736px) {
-    #logo img {
-        max-width: 350px;
+				height: 150px;
     }
 }
 
 @media screen and (max-width: 480px) {
     #logo img {
-        max-width: 300px;
+        height: 100px;
     }
 }
 
