--- a/site/static/css/main.css
+++ b/site/static/css/main.css
@@ -1,4 +1,3 @@
-@import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic");
 
 /* Reset */
@@ -3664,11 +3663,11 @@
 			background-position: center;
 			display: block;
 
-			-webkit-filter: brightness(30%);
-			-moz-filter: brightness(30%);
-			-o-filter: brightness(30%);
-			-ms-filter: brightness(30%);
-			filter: brightness(30%);
+			-webkit-filter: brightness(30%) blur(4px);
+			-moz-filter: brightness(30%) blur(4px);
+			-o-filter: brightness(30%) blur(4px);
+			-ms-filter: brightness(30%) blur(4px);
+			filter: brightness(30%) blur(4px);
 		}
 
 /* Contact */
