--- a/site/layouts/projects/single.html
+++ b/site/layouts/projects/single.html
@@ -4,134 +4,123 @@
 {{ partial "header.html" }}
 
 <body>
-    {{ "<!-- Wrapper -->" | safeHTML }}
-    <div id="wrapper">
+  {{ "<!-- Wrapper -->" | safeHTML }}
+  <div id="wrapper">
 
-        {{ partial "nav.html" . }} {{ "<!-- Main -->" | safeHTML }}
-        <div id="main" class="alt">
-            <div class="background" style="background-image: url({{ .Site.BaseURL }}/img/{{ $.RelPermalink }}/background.png);"></div>
+    {{ partial "nav.html" . }} {{ "<!-- Main -->" | safeHTML }}
+    <div id="main" class="alt">
+      <div class="background" style="background-image: url({{ .Site.BaseURL }}/img/{{ $.RelPermalink }}/background.png);"></div>
 
-            <!-- One -->
-            <section id="one">
-                <div class="inner">
-                    <div class="intro">
-                        <!-- Title -->
-                        {{ $image_path := (printf "img/%s" $.RelPermalink) }}
-                        {{ if (fileExists (printf "static/%s/logo.png" $image_path)) }}
-                        <div class="row">
-                            <div class="12u" id="logo">
-                                <img src="{{ .Site.BaseURL }}/{{ $image_path }}/logo.png" alt="{{ .Title }}">
-                            </div>
-                        </div>
-                        {{ else }}
-                        <header class="major">
-                          <h1>{{ .Title }}</h1>
-                        </header>
-                        {{ end }}
-                        <!-- Summary -->
-                        <div class="row">
-                            <div class="8u 12u$(small)">
-                                <div style="position: relative; margin-bottom: 5%; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
-                                  {{ if isset .Params "trailer"}}
-                                    <iframe title="YouTube Video" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube-nocookie.com/embed/{{ .Params.trailer }}?rel=0&amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen frameborder="0"></iframe>
-                                  {{ else }}
-                                    <img src="{{ .Site.BaseURL }}/{{ $image_path }}/{{ .Params.poster }}" style="position: absolute; top: 0; left: 0; width: 100%;">
-                                  {{ end }}
-                                </div>
-                            </div>
-                            <div class="4u 12u$(small)">
-                                <h4>What I did</h4>
-                                <ul class="alt">
-                                    {{ range .Params.contributions }}
-                                    <li>{{ .  | markdownify }}</li>
-                                    {{ end }}
-                                </ul>
-                            </div>
-                            {{ if isset .Params "tools" }}
-                            <div class="4u 12u$(small)">
-                                <h4>What I used</h4>
-                                {{ $global := . }}
-                                {{ range .Params.tools }}
-                                    {{ if eq . "Unity"}}
-                                    <a class="image" href="https://unity3d.com/"><img src="{{ $global.Site.BaseURL }}/img/unity.png" alt="" style="height: 64px; margin-right: 10px"></a>
-                                    {{ end }}
-                                    {{ if eq . "Unreal Engine"}}
-                                    <a class="image" href="https://www.unrealengine.com/en-US/blog"><img src="{{ $global.Site.BaseURL }}/img/unreal_engine.png" alt="" style="height: 64px; margin-right: 10px"></a>
-                                    {{ end }}
-                                    {{ if eq . "Visual Studio"}}
-                                    <a class="image" href="https://www.visualstudio.com/"><img src="{{ $global.Site.BaseURL }}/img/visual_studio.png" alt="" style="height: 64px; margin-right: 10px"></a>
-                                    {{ end }}
-                                    {{ if eq . "HacknPlan"}}
-                                    <a class="image" href="https://www.hacknplan.com/"><img src="{{ $global.Site.BaseURL }}/img/hacknplan.png" alt="" style="height: 64px; margin-right: 10px"></a>
-                                    {{ end }}
-                                    {{ if eq . "Jira"}}
-                                    <a class="image" href="https://www.jira.com/"><img src="{{ $global.Site.BaseURL }}/img/jira.png" alt="" style="height: 64px; margin-right: 10px"></a>
-                                    {{ end }}
-                                {{ end }}
-                            </div>
-                            {{ end }}
-                            <!-- Break -->
-                            {{ if isset .Params "download" }}
-                            <div class="8u 12u$(small)">
-                            {{ else }}
-                            <div class="12u">
-                            {{ end }}
-                                <ul class="actions vertical">
-                                    <h4>About the project</h4>
-                                    <ul class="alt">
-                                        <p>{{ .Params.description | markdownify }}</p>
-                                    </ul>
-                                </ul>
-                            </div>
-                            <div class="4u$ 12u$(small)">
-                                <ul class="actions vertical">
-                                    {{ if isset .Params "download" }}
-                                    <li><a href="{{ .Params.download }}" class="button big icon fa-download">Download</a></li>
-                                    {{ end }}
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    {{ if gt .Content 0 }}
-                    <a href="#two" id="scroll-notification" class="button scrolly">
-                      <span class="icon fa-arrow-down"></span>
-                      Read more
-                      <span class="icon fa-arrow-down"></span>
-                    </a>
-                    {{ end }}
-                    <div id="two" class="row">
-                      <div class="12u$">
-                        {{ .Content }}
-                      </div>
-                    </div>
+      <!-- One -->
+      <section id="one">
+        <div class="inner">
+          <div class="intro">
+            <!-- Title -->
+            {{ $image_path := (printf "img/%s" $.RelPermalink) }}
+            {{ if (fileExists (printf "static/%s/logo.png" $image_path)) }}
+            <div class="row">
+              <div class="12u" id="logo">
+                <img src="{{ .Site.BaseURL }}/{{ $image_path }}/logo.png" alt="{{ .Title }}">
+              </div>
+            </div>
+            {{ else }}
+            <header class="major">
+              <h1>{{ .Title }}</h1>
+            </header>
+            {{ end }}
+            <!-- Summary -->
+            <div class="row">
+              <div class="8u 12u$(small)">
+                <div style="position: relative; margin-bottom: 5%; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
+                  {{ if isset .Params "trailer"}}
+                  <iframe title="YouTube Video" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube-nocookie.com/embed/{{ .Params.trailer }}?rel=0&amp;showinfo=0" frameborder="0" gesture="media"
+                    allow="encrypted-media" allowfullscreen frameborder="0"></iframe>
+                  {{ else }}
+                  <img src="{{ .Site.BaseURL }}/{{ $image_path }}/{{ .Params.poster }}" style="position: absolute; top: 0; left: 0; width: 100%;">
+                  {{ end }}
                 </div>
-            </section>
-        </div>
-
-        {{ "<!-- Contact -->" | safeHTML}} {{ if .Site.Params.Contact.enable }} {{ partial "contact.html" . }} {{ end }}
-        {{ "<!-- Footer -->" | safeHTML}} {{ if .Site.Params.footer.enable }} {{ partial "footer.html" . }} {{ end }}
+              </div>
+              <div class="4u 12u$(small)">
+                <h4>What I did</h4>
+                <ul class="alt">
+                  {{ range .Params.contributions }}
+                  <li>{{ .  | markdownify }}</li>
+                  {{ end }}
+                </ul>
+              </div>
+              {{ if isset .Params "tools" }}
+              <div class="4u 12u$(small)">
+                <h4>What I used</h4>
+                {{ range $i := .Params.tools }}
+                {{ range $j := $.Site.Params.technologies }}
+                {{ if eq $i $j.name}}
+                <a class="image" href="{{ $j.url }}"><img src=" {{ $.Site.BaseURL }}/{{ $j.image }}" alt="" style="height: 64px; margin-right: 10px"></a>
+                {{ end }}
+                {{ end }}
+                {{ end }}
+              </div>
+              {{ end }}
+              <!-- Break -->
+              {{ if isset .Params "download" }}
+              <div class="8u 12u$(small)">
+                {{ else }}
+                <div class="12u">
+                  {{ end }}
+                  <ul class="actions vertical">
+                    <h4>About the project</h4>
+                    <ul class="alt">
+                      <p>{{ .Params.description | markdownify }}</p>
+                    </ul>
+                  </ul>
+                </div>
+                <div class="4u$ 12u$(small)">
+                  <ul class="actions vertical">
+                    {{ if isset .Params "download" }}
+                    <li><a href="{{ .Params.download }}" class="button big icon fa-download">Download</a></li>
+                    {{ end }}
+                  </ul>
+                </div>
+              </div>
+            </div>
+            {{ if gt .Content 0 }}
+            <a href="#two" id="scroll-notification" class="button scrolly">
+              <span class="icon fa-arrow-down"></span>
+              Read more
+              <span class="icon fa-arrow-down"></span>
+            </a>
+            {{ end }}
+            <div id="two" class="row">
+              <div class="12u$">
+                {{ .Content }}
+              </div>
+            </div>
+          </div>
+      </section>
     </div>
 
-    {{ "<!-- Scripts -->" | safeHTML}} {{ partial "js.html" . }}
-    <script type="text/javascript">
-      function isScrollHidden() {
-        return $(window).scrollTop() > 50;
-      }
+    {{ "<!-- Contact -->" | safeHTML}} {{ if .Site.Params.Contact.enable }} {{ partial "contact.html" . }} {{ end }}
+    {{ "<!-- Footer -->" | safeHTML}} {{ if .Site.Params.footer.enable }} {{ partial "footer.html" . }} {{ end }}
+  </div>
 
-      if(isScrollHidden())
-      {
-        $('#scroll-notification').hide();
-      }
 
-      $(window).bind('scroll', function() {
-         if (isScrollHidden()) {
-           $('#scroll-notification').fadeOut(200);
-         }
-         else {
-           $('#scroll-notification').fadeIn(200);
-         }
-      });
-    </script>
+  {{ "<!-- Scripts -->" | safeHTML}} {{ partial "js.html" . }}
+  <script type="text/javascript">
+    function isScrollHidden() {
+      return $(window).scrollTop() > 50;
+    }
+
+    if (isScrollHidden()) {
+      $('#scroll-notification').hide();
+    }
+
+    $(window).bind('scroll', function() {
+      if (isScrollHidden()) {
+        $('#scroll-notification').fadeOut(200);
+      } else {
+        $('#scroll-notification').fadeIn(200);
+      }
+    });
+  </script>
 
 </body>
 
