* added white border around images on project pages and about page

--- a/site/layouts/page/single.html
+++ b/site/layouts/page/single.html
@@ -49,6 +49,12 @@
     {{ end }}
   </div>
 
+  <!-- Styling for content -->
+  <style>
+    p>img {
+      border: 2px solid white;
+    }
+  </style>
 
   {{ "<!-- Scripts -->" | safeHTML}}
   {{ partial "js.html" . }}
