* project logo is now locked to max 100% width

--- a/site/layouts/projects/single.html
+++ b/site/layouts/projects/single.html
@@ -20,7 +20,7 @@
             {{ if (fileExists (printf "static/%s/logo.png" $image_path)) }}
             <div class="row">
               <div class="12u" id="logo">
-                <img src="{{ .Site.BaseURL }}/{{ $image_path }}/logo.png" alt="{{ .Title }}">
+                <img src="{{ .Site.BaseURL }}/{{ $image_path }}/logo.png" alt="{{ .Title }}" style="max-width: 100%">
               </div>
             </div>
             {{ else }}
