* minor changes for re-publishing of site

--- a/site/layouts/partials/tile.html
+++ b/site/layouts/partials/tile.html
@@ -14,7 +14,7 @@
   <article>
     <!-- NOTE: keep this as the last element so that it doesn't look weird -->
     <header class="major">
-      <h3>Your Project</h3>
+      <h3>A "new" Project</h3>
       <p>contact me?</p>
     </header>
     <img style="margin-left: 1em; padding-top: 7em; float: right" src="{{ .Site.Params.baseURL }}img/arrow.png" alt="" />
