* replaced "some large .png files with .jpg versions"
tmp

tmp

tmp

--- a/site/layouts/project/single.html
+++ b/site/layouts/project/single.html
@@ -9,7 +9,7 @@
 
     {{ partial "nav.html" . }} {{ "<!-- Main -->" | safeHTML }}
     <div id="main" class="alt">
-      <div class="background" style="background-image: url({{ .Site.BaseURL }}/img/{{ $.RelPermalink }}/background.png);"></div>
+      <div class="background" style="background-image: url({{ .Site.BaseURL }}/img/{{ $.RelPermalink }}/background.jpg);"></div>
 
       <!-- One -->
       <section id="one">
