* changed "technologies that I use" to "technologies that I have used" + added eclipse ide as new technology that I have used

--- a/site/layouts/page/single.html
+++ b/site/layouts/page/single.html
@@ -24,7 +24,7 @@
 
           {{ "<!-- Technologies -->" | safeHTML}}
           {{ if .Params.listTechnologies }}
-          <p>Technologies that I use...</p>
+          <p>Technologies that I have used...</p>
           <ul style="list-style: none">
             {{ range $j := $.Site.Params.technologies }}
             <li style="padding-bottom: 10px">
