--- a/site/layouts/partials/contact.html
+++ b/site/layouts/partials/contact.html
@@ -13,7 +13,8 @@
                     </div>
                     <div class="field">
                         <label for="message">Message</label>
-                        <textarea name="message" id="message" rows="6"></textarea>
+                        <!-- NOTE: top padding + bottom padding == 2em, extra .2em seems to get rid of scrollbar -->
+                        <textarea name="message" id="message" rows="6" style="resize: vertical; min-height: 3.2em"></textarea>
                     </div>
                     <ul class="actions">
                         <li><input type="submit" value="{{ .Site.Params.Contact.buttonSend }}" class="special" /></li>
