--- a/site/layouts/project/single.html
+++ b/site/layouts/project/single.html
@@ -41,12 +41,14 @@
                 </div>
               </div>
               <div class="4u 12u$(small)">
+                {{ if isset .Params "contributions" }}
                 <h4>What I did</h4>
                 <ul class="alt">
                   {{ range .Params.contributions }}
                   <li>{{ .  | markdownify }}</li>
                   {{ end }}
                 </ul>
+                {{ end }}
               </div>
               {{ if isset .Params "tools" }}
               <div class="4u 12u$(small)">
