--- a/site/layouts/project/single.html
+++ b/site/layouts/project/single.html
@@ -17,6 +17,7 @@
           <div class="intro">
             <!-- Title -->
             {{ $image_path := (printf "img/%s" $.RelPermalink) }}
+            {{ $video_path := (printf "vid/%s" $.RelPermalink) }}
             {{ if (fileExists (printf "static/%s/logo.png" $image_path)) }}
             <div class="row">
               <div class="12u" id="logo">
@@ -33,8 +34,17 @@
               <div class="8u 12u$(small)">
                 <div style="position: relative; margin-bottom: 5%; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
                   {{ if isset .Params "trailer"}}
-                  <iframe title="YouTube Video" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube-nocookie.com/embed/{{ .Params.trailer }}?rel=0&amp;showinfo=0" frameborder="0" gesture="media"
+                    {{ if eq (len .Params.trailer) 2 }}
+                      {{ if eq (index .Params.trailer 0) "youtube" }}
+                  <iframe title="YouTube Video" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube-nocookie.com/embed/{{ index .Params.trailer 1 }}?rel=0&amp;showinfo=0" frameborder="0" gesture="media"
                     allow="encrypted-media" allowfullscreen frameborder="0"></iframe>
+                      {{ end }}
+                    {{ else }}
+                  <video style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" controls>
+  <source src="{{ .Site.BaseURL }}/{{ $video_path }}/{{ index .Params.trailer 0 }}" type="video/{{ trim (path.Ext (index .Params.trailer 0)) "." }}">
+Your browser does not support the video tag.
+</video>
+                    {{ end }}
                   {{ else }}
                   <img src="{{ .Site.BaseURL }}/{{ $image_path }}/{{ .Params.poster }}" style="position: absolute; top: 0; left: 0; width: 100%;">
                   {{ end }}
