+ added caption for image in arguments-mini project page to clarify which version of arguments-mini-test the screenshot is of

--- a/site/layouts/project/single.html
+++ b/site/layouts/project/single.html
@@ -116,7 +116,7 @@ Your browser does not support the video tag.
 
   <!-- Styling for content -->
   <style>
-    p>img {
+    p>img, figure>img {
       border: 2px solid white;
     }
   </style>
